--- a/circle.yml
+++ b/circle.yml
@@ -4,15 +4,12 @@ machine:
 dependencies:
   override:
     - docker build -t quay.io/pedge/protoeasy .
-    - docker build -t quay.io/pedge/protoeasy-proto2 -f Dockerfile.proto2 .
 test:
   override:
-    - docker run quay.io/pedge/protoeasy make example-complete
-    - docker run quay.io/pedge/protoeasy-proto2 make example-proto2
+    - docker run quay.io/pedge/protoeasy make example-complete example-proto2
 deployment:
   hub:
     branch: master
     commands:
       - docker login quay.io -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push quay.io/pedge/protoeasy
-      - docker push quay.io/pedge/protoeasy-proto2
